--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hookform/resolvers": "^3.1.1",
+    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -10,9 +12,23 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/react-js-pagination": "^3.0.4",
+    "@types/react-paginate": "^7.1.1",
+    "axios": "0.27.2",
+    "history": "^5.3.0",
+    "joi": "^17.10.2",
     "react": "^18.2.0",
+    "react-bootstrap-4-pagination": "^1.0.4",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.46.2",
+    "react-icons": "^4.11.0",
+    "react-js-pagination": "^3.0.3",
+    "react-paginate": "^8.2.0",
+    "react-redux": "^8.1.2",
+    "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.68.0",
+    "serve": "^14.2.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
