--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/traverse": "7.23.2",
     "@hookform/resolvers": "^3.1.1",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.14.1",
@@ -15,9 +16,11 @@
     "@types/react-js-pagination": "^3.0.4",
     "@types/react-paginate": "^7.1.1",
     "axios": "0.27.2",
+    "bootstrap": "^5.3.2",
     "history": "^5.3.0",
     "joi": "^17.10.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.0",
     "react-bootstrap-4-pagination": "^1.0.4",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.2",
