--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^18.0.0",
     "@types/react-js-pagination": "^3.0.4",
     "@types/react-paginate": "^7.1.1",
+    "@types/styled-components": "^5.1.29",
     "axios": "0.27.2",
     "bootstrap": "^5.3.2",
     "history": "^5.3.0",
@@ -30,8 +31,10 @@
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.7",
     "sass": "^1.68.0",
     "serve": "^14.2.1",
+    "styled-components": "^6.1.0",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
