--- a/package.json
+++ b/package.json
@@ -67,6 +67,9 @@
     ]
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.200"
+    "@types/lodash": "^4.14.200",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-replace": "^2.2.0",
+    "rollup-plugin-terser": "^7.0.2"
   }
 }
